Corrected menu and icons jumping. media queries forIcons - margin-top

--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ div.author {
     /*height: 200px;*/
     width: 200px;
     overflow: hidden;
-    cursor: context-menu;
+    cursor: default;
 }
 
 .card .back {
